# vmm_manager

./: .env.default  .flake8  .gitignore  .pylintrc  LICENSE  Pipfile  README.md  inventario_exemplo.yaml  inventory_example.yaml  lint.sh  pyproject.toml  requirements.txt  schema.yaml  vmm_manager.ini  vmm_manager.py
.github/workflows/: integration.yml  main.yml  pythonapp.yml  release.yml
app/: inventario.py  scvmm.py
ps_templates/: excluir_vm.j2  listar_opcoes.j2  monitorar_jobs.j2  testar_conexao.j2
templates/: adquirir_lock.j2  configurar_vmm.j2  criar_vm.j2  criar_vm_pos.j2  liberar_lock.j2  limpar_objs_criacao_vm.j2  validar_inventario.j2
tests/: base.py  conftest.py  dados_teste.py  test_comparacao_inv_disco.py  test_comparacao_inv_regiao.py  test_comparacao_inv_vm.py  test_comparacao_inventarios.py  test_comparison_inv_disk.py  test_comparison_inv_region.py  test_comparison_inv_vm.py  test_parser_local.py  test_parser_local_validacao.py  test_parser_local_validations.py  test_vmm_manager.py  utils.py
vmm_manager/: __init__.py  __main__.py  vmm_manager.py
vmm_manager/app/: comando.py  inventario.py  plano_execucao.py  scvmm.py  servidor_acesso.py  util.py
vmm_manager/entidade/: acao.py  action.py  inventario.py  plan.py  plano_execucao.py  vm.py  vm_ansible.py  vm_disco.py  vm_rede.py
vmm_manager/entity/: action.py  inventory.py  plan.py  vm.py  vm_ansible.py  vm_disk.py  vm_network.py
vmm_manager/includes/: schema.yaml
vmm_manager/includes/ps_templates/: add_operation_lock.j2  adquirir_lock.j2  atualizar_memoria_dinamica.j2  atualizar_virt_aninhada.j2  atualizar_virtualizacao_aninhada.j2  atualizar_vm.j2  clean_objects_after_vm_creation.j2  connection_test.j2  convert_vm_disk.j2  converter_disco_vm.j2  create_vm.j2  create_vm_disk.j2  create_vm_pos.j2  criar_disco_vm.j2  criar_vm.j2  criar_vm_pos.j2  delete_vm.j2  delete_vm_disk.j2  excluir_disco_vm.j2  excluir_vm.j2  expand_vm_disk.j2  expandir_disco_vm.j2  get_additional_disks.j2  get_available_regions.j2  get_vms_in_group.j2  list_options.j2  monitore_jobs.j2  move_vm_disk.j2  move_vm_region.j2  mover_disco_vm.j2  mover_vm_regiao.j2  obter_discos_adicionais.j2  obter_regioes_disponiveis.j2  obter_vms_agrupamento.j2  update_dynamic_memory.j2  update_nested_virtualization.j2  update_vm.j2  validar_inventario.j2  validate_inventory.j2  vmm_setup.j2
vmm_manager/infra/: access_server.py  comando.py  command.py  servidor_acesso.py
vmm_manager/parser/: parser_local.py  parser_remote.py  parser_remoto.py
vmm_manager/scvmm/: enums.py  scjob.py  scregion.py
vmm_manager/util/: config.py  msgs.py  operacao.py  operation.py
