[tool.poetry]
name = "vmm_manager"
version = "1.0.1"
description = "Management of resources on System Center Virtual Machine Manager (SCVMM) in a declarative way."
authors = ["Estevão Costa <ecosta@mpes.mp.br>"]

license = "MIT"
readme = "README.md"

homepage = "https://github.com/MP-ES/vmm_manager"
repository = "https://github.com/MP-ES/vmm_manager"
documentation = "https://github.com/MP-ES/vmm_manager"

keywords = ["IaC", "scvmm", "vmm_manager"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "^0.18"
configargparse = "^1"
jinja2 = "^3"
paramiko = "^3"
pytz = ">=2023.3"
tqdm = "^4"
yamale = "^4"
yamlable = "^1"

[tool.poetry.dev-dependencies]
autopep8 = "^2"
Faker = "^21"
flake8 = "^6"
flake8-quotes = "^3"
isort = "^5"
pytest = "^7"
pytest-mock = "^3"
rope = "^1"

[tool.poetry.scripts]
vmm_manager = "vmm_manager.vmm_manager:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
