[tool.poetry]
name = "vmm_manager"
version = "1.3.0"
description = "Management of resources on System Center Virtual Machine Manager (SCVMM) in a declarative way."
authors = ["Estevão Costa <ecosta@mpes.mp.br>"]

license = "MIT"
readme = "README.md"

homepage = "https://github.com/MP-ES/vmm_manager"
repository = "https://github.com/MP-ES/vmm_manager"
documentation = "https://github.com/MP-ES/vmm_manager"

keywords = ["IaC", "scvmm", "vmm_manager"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "^0.19"
configargparse = "^1"
jinja2 = "^3"
paramiko = "^4"
pytz = ">=2025.2"
tqdm = "^4"
yamale = "^6"
yamlable = "^1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2"
Faker = "^40"
flake8 = "^7"
flake8-quotes = "^3"
isort = "^7"
pytest = "^9"
pytest-mock = "^3"
rope = "^1"

[tool.poetry.scripts]
vmm_manager = "vmm_manager.vmm_manager:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
